--- a/src/css/App.css
+++ b/src/css/App.css
@@ -1,27 +1,61 @@
 .App {
-  text-align: center; }
+  text-align: center;
+}
 
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
-  height: 80px; }
+  height: 80px;
+}
 
 .App-header {
   background-image: url(../images/black_woven_seamless_tile.jpg);
   height: 150px;
   padding: 20px;
-  color: white; }
+  color: white;
+}
 
 .App-title {
-  font-size: 1.5em; }
+  font-size: 1.5em;
+}
 
 .App-intro {
-  font-size: large; }
+  font-size: large;
+}
 
 .Clock {
-  width: 200px; }
+  width: 200px;
+}
 
 @keyframes App-logo-spin {
   from {
-    transform: rotate(0deg); }
+    transform: rotate(0deg);
+  }
   to {
-    transform: rotate(360deg); } }
+    transform: rotate(360deg);
+  }
+}
+
+.button {
+  position: absolute;
+  bottom: 17px;
+  width: 100%;
+  padding: 20px 0;
+  z-index: 1;
+  text-align: center;
+}
+
+button {
+  background: white;
+  padding: 7px;
+  border: 1px solid #005e95;
+  font-size: 0.9em;
+  margin: 5px;
+  color: #005e95;
+  font-family: "Avenir Next W01", "Arial", sans-serif;
+}
+
+button:hover {
+  background: #005e95;
+  color: white;
+  cursor: pointer;
+}
